Update order of music playlists

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       <link href="%PUBLIC_URL%/css/magnific-popup.css" rel="stylesheet">
 
 
-      <title>Me</title>
+      <title>Ahmed Elehwany</title>
   </head>
 
   <body>
