--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
       <meta content="#000000" name="theme-color">
       <link href="%PUBLIC_URL%/manifest.json" rel="manifest">
-      <link href="%PUBLIC_URL%/circle-profilepic.png" rel="shortcut icon">
+      <link href="%PUBLIC_URL%/circle-profilepic.png" type="image/png" rel="shortcut icon">
       <link href="%PUBLIC_URL%/css/default.css" rel="stylesheet">
       <link href="%PUBLIC_URL%/css/layout.css" rel="stylesheet">
       <link href="%PUBLIC_URL%/css/media-queries.css" rel="stylesheet">
