--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
       <meta charset="utf-8">
       <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
       <meta content="#000000" name="theme-color">
+      <meta property="og:image" content="%PUBLIC_URL%/circle-profilepic.png">
       <link href="%PUBLIC_URL%/manifest.json" rel="manifest">
       <link href="%PUBLIC_URL%/circle-profilepic.png" type="image/png" rel="shortcut icon">
       <link href="%PUBLIC_URL%/css/default.css" rel="stylesheet">
