--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,12 @@
       <meta charset="utf-8">
       <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
       <meta content="#000000" name="theme-color">
+      <meta property='og:title' content='Personal Website'/>
+      <meta property='og:description' content='ahmed elehwany - personal website'/>
+      <meta property='og:url' content='https://ahmedelehwany.com/'/>
       <meta property="og:image" content="%PUBLIC_URL%/circle-profilepic.png">
+      <meta property="og:image:width" content="180" />
+      <meta property="og:image:height" content="110" />
       <link href="%PUBLIC_URL%/manifest.json" rel="manifest">
       <link href="%PUBLIC_URL%/circle-profilepic.png" type="image/png" rel="shortcut icon">
       <link href="%PUBLIC_URL%/css/default.css" rel="stylesheet">
